PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2005, Version 4.4.2
- Prevent header injection by limiting each header to a single line. (Ilia)
- Fixed possible XSS inside error reporting functionality. (Ilia)
- Fixed bug #35536 (mysql_field_type() doesn't handle NEWDECIMAL). (Tony)
- Fixed bug #35410 (wddx_deserialize() doesn't handle large ints as keys 
  properly). (Ilia)
- Fixed bug #35341 (Fix for bug #33760 breaks build with older curl). (Tony)
- Fixed bug #35278 (Multiple virtual() calls crash Apache 2 php module). (Ilia)
- Fixed bug #35062 (socket_read() produces warnings on non blocking sockets).
  (Nuno, Ilia)
- Fixed bug #34359 (Possible crash inside fopen http wrapper). (Ilia,Nuno,Sara)
- Fixed bug #33523 (Memory leak in xmlrpc_encode_request()). (Ilia)
- Fixed bug #33153 (crash in mssql_next result). (Frank)
- Fixed bug #32009 (crash when mssql_bind() is called more than once). (Frank)
- Fixed bug #33963 (mssql_bind() fails on input parameters). (Frank)
- Fixed bug #33201 (Crash when fetching some data types). (Frank)
- Fixed bug #30760 (Remove MessageBox on win32 for E_CORE errors if 
  display_startup_error is off). (Ilia)

18 Nov 2005, Version 4.4.2RC1
- Added missing safe_mode/open_basedir checks into cURL extension. (Ilia)
- Backported missing imap_mailcompose() fixes from PHP 5.x. (Ilia)
- Fixed Apache 2 regression with sub-request handling on non-linux systems.
  (Ilia, Tony)
- Fixed bug #35257 (Calling ob_flush after creating an ob callback causes 
  segfault). (Tony)
- Fixed bug #35079 (stream_set_blocking(true) toggles, not enables 
  blocking). (askalski at gmail dot com, Tony)
- Fixed bug #35078 (configure does not find ldap_start_tls_s). (Jani)
- Fixed bug #35071 (Wrong fopen mode used in GD safe-mode checks). (Jani)
- Fixed bug #35067, #35063 (key(),current() need to work by reference). (Ilia)